// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateEventLdJson should generate a ld+json object for event 1`] = `
{
  "@context": "http://schema.org",
  "@type": "Event",
  "description": "The coolest event in the world during which we will run and dance and sing
	<script>alert("bad time")</script>, 😊, &lt;blink&gt;what what&lt;blink&gt; this is getting
	longer than it needs to be why am I still typing omg",
  "endDate": "1970-01-18T05:01-05:00",
  "location": {
    "@type": "Place",
    "address": {
      "@type": "PostalAddress",
      "addressCountry": undefined,
      "addressLocality": "city name",
      "addressRegion": "NY",
      "postalCode": "00000",
      "streetAddress": "address 1 address 2 address 3",
    },
    "geo": {
      "@type": "GeoCoordinates",
      "latitude": undefined,
      "longitude": undefined,
    },
    "name": undefined,
  },
  "name": "So much fun",
  "offers": {
    "@type": "Offer",
    "price": 10,
    "priceCurrency": "USD",
  },
  "startDate": "1970-01-18T04:01-05:00",
  "url": "https://www.meetup.com/group/events/123456",
}
`;

exports[`generateFeeLdJson should generate a ld+json object for offers 1`] = `
{
  "offers": {
    "@type": "Offer",
    "price": 11,
    "priceCurrency": "USD",
  },
}
`;

exports[`generateLocationLdJson should generate a ld+json object for location 1`] = `
{
  "location": {
    "@type": "Place",
    "address": {
      "@type": "PostalAddress",
      "addressCountry": "usa",
      "addressLocality": "city name",
      "addressRegion": "NY",
      "postalCode": "00000",
      "streetAddress": "address 1 address 2 address 3",
    },
    "geo": {
      "@type": "GeoCoordinates",
      "latitude": undefined,
      "longitude": undefined,
    },
    "name": "some place",
  },
}
`;
